sites/all/themes/ukabbalah/sass/style.scss
/* ... */
p {
    font-weight: normal;
    color: $colorParagraph;
    text-align: left;
    font-size: 16px;
    line-height: 25px;
}
a {
  color: $colorRed;
  text-decoration: none;
}
a:hover {
  color: #53100d;
  text-decoration: none;
}
em {
    font-style: italic;
}
strong {
  font-family: $fontFaceBold;
  font-weight: normal;
}
ul li {
    list-style: none outside none;
}

/* ==============================================================
   ================= HEADER =====================================
   ============================================================== */

/*================== UNIVERSAL MENU ============================= */

#topHeaderWrapper {
    background-color: $colorGray;
    height: 30px;
    padding: 10px 0;
}
.topHeader {
    margin: 0 auto;
    min-width: 940px;
    max-width: 1580px;
    padding-right: 20px;
}
#topImageCont{
    float: left;
    margin-left: 20px;
    margin-top: -3px;
    width: 260px;
    height: 35px;
    img{
      width: 260px;
    height: 35px;
    }
}
.topHeader #topImageCont {
    padding-left: 0 !important;
}
#block-nice-menus-2 {
    text-align: center;
    margin: 0 auto;
    z-index: 200;
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }
  li {  border: medium none;
        height: 40px;
        background: none;
        float: left;
        &.first a{
            padding-left: 5px;
        }
        a {padding: 4px 10px;
    }
    &:nth-child(3){
        background: url("../images/nav-triangle-wht.png") no-repeat center bottom;
        height: 41px;
        & a{
            color: $colorRed;
        }
        }
    }
}

/*================== END UNIVERSAL MENU ============================= */

.donate{
    float: right;
    text-align: center;
    background-color: $colorRed;
    width: 65px;
    & a{
        color: $colorWhite !important;
    line-height: 26px;
    text-transform: capitalize;
    }
}
.donateFloat {
    @extend .donate;
    display: none;
    font-size: 12px !important;
    margin: 4px 20px 0 10px;
}
#headerLinks .region-universalmenu{
    float: left;
    margin-left: 20px;
}
#headerLinks a {
    font-size: 12px !important;
    color: $colorBrown;
}
.searchLogo {
    float: right;
    margin-right: 20px;
}
/*================== LOCAL MENU ============================= */

#outerMenu{
    margin-bottom:-4px;
    width: 100%;
    clear: both;
    ul li {
        display: inline-block;
    float: none;
    //margin: 0 4px;
    border-top: 0 none;
    border: none;
    background: none;
    @media screen and (max-width: 1340px) {
           margin: 0 2px;
      }

     & a{
        // padding: 0 5px;
        // color: $colorBrown;
        // font-size: 15px;
        // text-transform: uppercase;
        @media screen and (max-width: 1340px) {
           font-size: 12px;
           padding: 0;
          }
    }
    &.first{
        margin-left: 0 !important;
        }
    &.last{
        margin-right: 0 !important;
        }
    }  
}
#nice-menu-1 .active{
            color: $colorRed!important;
    }
#mainOuterContentLogoMenuWrapper {
    background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom transparent;
    height: 40px;
    position: relative;
    z-index: 140;
}
#newMainContentLogoTitle {
    float: left;
    text-align: right;
    width: 268px;
    margin-top: 7px;
    & a{
    font-size: 15px;
    }
}
#mainContentMenu {
    float: left;
    margin-left: 32px;
    margin-top: 7px;
    margin-bottom: 0;
    padding-left: 0;
}
.donateFloatFix {
    display: inline;
}
.scrolling{
    z-index: 1400!important;
    position: fixed !important;
    top: 0;
    width: 100%;
}
#mainoutercontentLogoMenuWrapper {
    background: url("../images/shadow_local_menu.png") repeat-x 100px 100%;
    position: relative;
    height: 100px;
    z-index: 140;  
}
.scrolling #newMainContentLogoTitle {
    margin-left: 20px;
    text-align: left;
    width: auto;
}
.scrolling .topHeader {
    max-width: 100%;
    min-width: 100%;
    width: 100%;
}
#headerSearch {
    float: right;
    font-size: 13px;
    margin-top: 2px;
    text-align: right;
    text-transform: capitalize;
}
.not-logged-in #headerSearch{
  margin-top: 11px;
}
/*========================new menu=======================================*/

#newTopHeaderWrapper {
    background: none repeat scroll 0 0 #433A3A;
    clear: both;
    float: left;
    width: 100%;
}
#logoKabblah {
    float: left;
    margin: 20px;
}
#siteName {
    color: #999999;
    float: left;
    font-family: proxiregular;
    font-size: 16px;
    margin-top: 28px;
}
#menuLocalWrapper {
    background: none repeat scroll 0 0 #564E4E;
    border-bottom: 2px solid #3ba2c1; //change code color for each sites
    clear: both;
    float: left;
    height: 40px;
    margin-bottom: 5px;
    width: 100%;
}
#headerSearch {
    float: right;
    font-size: 13px;
    margin-top: 15px;
    text-align: right;
    text-transform: capitalize;
}

#search {
    float: left;
}
#usersessionsession {
    float: left;
    margin-right: 20px;
}
.localSite {
    color: #999999;
    font-family: georgia;
    font-size: 20px;
    font-style: italic;
    margin-bottom: 10px;
    text-align: right;
}
.usersessionsession{
  text-align: center;
  color: #fff;
  font-size: 16px;
}
.usersessionsession a.activeLink {
    font-weight: bold;
    border-bottom: 3px solid #3BA2C1;
}
.usersessionsession a {
    color: #fff;
}
.divider {
    margin: 0 22px;
}
#donationWrapper {
    float: right;
}
#desktopMenu,#mobileMenu {
    float: left;
}
.donate {
    display: inline-block;
    padding: 7px 33px;
}
.donate a{
  color: #fff;
  font-weight: bold;
  font-size: 16px;
}
.languageLink > a {
    color: #FFFFFF;
    font-size: 12px;
    margin-right: 20px;
}
.languageLink {
    float: left;
    margin-top: 10px;
}
#nice-menu-1 {
    margin-top: 11px;
    z-index: 1000;
}
#nice-menu-1 li {
    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
    border: medium none;
}
/* ... */

